--- a/index.html
+++ b/index.html
@@ -7,6 +7,99 @@
   <title>London Trip</title>
 </head>
 <body>
+  <header>
+    <h1>IL MIO VIAGGIO A LONDRA</h1>
+    <br>
+    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+ </header>
+<hr>
+
+<section>
+<h2>Le mie spese</h2>
+
+  <table>
+    <thead>
+      <th>Numero</th>
+      <th>Descrizione</th>
+      <th>Costo</th>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Biglietto Aereo</td>
+        <td>120 €</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Biglietto Aereo</td>
+        <td>120 €</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Biglietto Aereo</td>
+        <td>120 €</td>
+      </tr>
+      <tr>
+        <td>Totale</td>
+        <td></td>
+        <td>360 €</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
+  <hr>
   
+<section>
+  <h3>Cose da fare</h3>
+  <ul>
+    <li>Visitare la Tower of London &#x274C;</li>
+    <li>Visitare Greenwich &#9989;</li>
+    <li>Ascoltare un artista di strada a Covent Garden &#9989;</li>
+    <li>Mangiare il tipico fish and chips inglese &#x274C;</li>
+  </ul>
+</section>
+
+  <hr>
+
+<section>
+  <h3>Info utili</h3>
+
+  <ol>
+    <li> <h5>Numeri utili di emergenza</h5>
+      <ul>
+        <li><strong>999 -</strong>  Emergenza</li>
+        <li><strong >101 -</strong>  Numero Polizia</li>
+        <li><strong >111 -</strong>  Numero assistenza medica</li>
+      </ul>
+    </li>
+    <li><h5>Hotel</h5>
+      <ul>
+        <li> <strong>Nome Hotel: </strong> Buckingham Palace</li>
+        <li> <strong> Indirizzo Hotel: </strong>Westminster, London WS1AA, Regno Unito </li>
+      </ul>
+    </li>
+    <li><h5>Aereo</h5>
+      <ul>
+        <li> <strong> Volo di Andata: </strong>Y1234X. ore 9.30 da Milano Malpensa</li>
+        <li> <strong>Volo di Ritorno:</strong>  Y1236X, ore 18.30 da London Heathrow </li>
+      </ul>
+    </li>
+  </ol>
+</section>
+
+  <hr>
+
+  <footer>
+  <img src="img/londra1.jpg" alt="">
+  <img src="img/londra2.jpg" alt="">
+  <img src="img/londra3.jpg" alt="">
+  </footer>
+
+
+
 </body>
 </html>
